-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.2
-
None
-
-
1da0a668e52994832d8a048772bed65b61cb0e9b (qt/qtsvg/dev) 1ae9127b5e005892c2ca31d7530a9a7f2d5c3c81 (qt/qtsvg/6.1) ea84510c9059809a8556c393d7c9d593c09e430e (qt/qtsvg/6.2) 8a2a9c9d763709f032bc82e2711dbe56a4ad4160 (qt/tqtc-qtsvg/5.15)
An error in the QSvgRenderer class crashes the application. QtCreator also crashes when trying to show this svg file.
A minimal project reproducing this error has been added to this issue.
The problem is with the svg animateColor element and the negative begin attribute.
For Gerrit Dashboard: QTBUG-94878 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
358093,2 | Fix parsing of animation clock values | dev | qt/qtsvg | Status: MERGED | +2 | 0 |
359288,2 | Fix parsing of animation clock values | 6.2 | qt/qtsvg | Status: MERGED | +2 | 0 |
359289,2 | Fix parsing of animation clock values | 6.1 | qt/qtsvg | Status: MERGED | +2 | 0 |
359298,4 | Fix parsing of animation clock values | tqtc/lts-5.15 | qt/tqtc-qtsvg | Status: MERGED | +2 | 0 |